# Standoff-2

./: AGENT.md  README.md  aimbot.py  build.gradle  buildozer.spec  gradle.properties  main.py  memory_reader.py  menu.py  radar.py  settings.gradle
.github/workflows/: blank.yml  build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/fpssim/: FloatingMenuService.java  MainActivity.java
app/src/main/res/values/: strings.xml
logic/: math_utils.py  memory.py  radar.py
